# Ratspeak

./: .gitignore  BETA.md  Cargo.toml  README.md  VERSION
.github/workflows/: build-desktop.yml  ci.yml  release-android.yml  release-desktop.yml  release-ios.yml  release-macos.yml  release-windows.yml
crates/ratspeak-agent/: Cargo.toml  README.md
crates/ratspeak-agent/src/: config.rs  ctl.rs  main.rs  provider.rs
crates/ratspeak-cli/: Cargo.toml  README.md
crates/ratspeak-cli/docs/: agent-onboarding-runbook.md  agent-runner-contract.md
crates/ratspeak-cli/src/: agent_actions.rs  agent_admin.rs  agent_policy.rs  daemon_api.rs  error.rs  event_store.rs  lib.rs  output.rs  profile.rs  runtime_host.rs
crates/ratspeak-cli/src/commands/: mod.rs
crates/ratspeak-cli/tests/: agent_onboarding.rs  daemon_lifecycle.rs  isolation.rs
crates/ratspeak-core/: Cargo.toml
crates/ratspeak-core/src/: config.rs  lib.rs  notification.rs  radio.rs  types.rs
crates/ratspeak-db/: Cargo.toml
crates/ratspeak-db/src/: db.rs
crates/ratspeak-runtime/: Cargo.toml
crates/ratspeak-runtime/src/: announce_handlers.rs  bootstrap.rs  hardware.rs  helpers.rs  identity_service.rs  lib.rs  lxmf.rs  messaging.rs  profile_lock.rs  propagation.rs  rns.rs  rns_config.rs  state.rs  vault.rs  voice.rs
crates/ratspeak-tauri/: Cargo.toml  build.rs
crates/ratspeak-tauri/src/: lib.rs  notifier.rs  window_prefs.rs
crates/ratspeak-tauri/src/commands/: agents.rs  ble.rs  contact_card.rs  contacts.rs  games.rs  hardware.rs  identity.rs  interfaces.rs  messaging.rs  mod.rs  network.rs  peers.rs  shared.rs  system.rs  voice.rs
crates/ratspeak-tauri/tests/: db_concurrency.rs  source_contracts.rs
dashboard/: build-css.sh  index.html
dashboard/scripts/: test_relative_time.js
dashboard/static/css/: 00-tokens.css  04-layout.css  05-panels.css  06-forms.css  07-components.css  08-modals.css  09-messaging.css  10-views.css  11-games.css  12-animations.css  13-responsive.css
dashboard/static/js/: activity.js  connections.js  constants.js  contact_card.js  dialogs.js  events.js  games_tab.js  gestures.js  health.js  identity.js  lxmf.js  modals.js  nav.js  peers.js  peers_cache.js  propagation.js  settings.js  setup.js  state.js  tauri_events.js  theme.js  toasts.js  ui_shared.js  view_stack.js  voice_ringtones.js
scripts/release/: assert-no-tauri-dev-url.sh  prepare-tauri-sidecars.sh  verify-macos-dmg.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
