[workspace]
resolver = "2"
exclude = ["src-tauri"]
members = [
    "crates/ratspeak-core",
    "crates/ratspeak-db",
    "crates/ratspeak-runtime",
    "crates/ratspeak-tauri",
]

[workspace.package]
version = "1.0.12"
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.85"

[workspace.dependencies]
# --- From rsReticulum (sibling directory) ---
rns-crypto = { path = "../rsReticulum/crates/rns-crypto" }
rns-wire = { path = "../rsReticulum/crates/rns-wire" }
rns-identity = { path = "../rsReticulum/crates/rns-identity" }
rns-transport = { path = "../rsReticulum/crates/rns-transport" }
rns-link = { path = "../rsReticulum/crates/rns-link" }
rns-protocol = { path = "../rsReticulum/crates/rns-protocol" }
rns-interface = { path = "../rsReticulum/crates/rns-interface" }
rns-runtime = { path = "../rsReticulum/crates/rns-runtime" }

# --- From rsLXMF (sibling directory) ---
lxmf-core = { path = "../rsLXMF/crates/lxmf-core" }

# --- From rsLXST (sibling directory) ---
lxst-core = { path = "../rsLXST/crates/lxst-core" }
lxst-rns = { path = "../rsLXST/crates/lxst-rns" }
lxst-telephony = { path = "../rsLXST/crates/lxst-telephony" }

# --- Internal crates ---
# lrgp lives in the sibling lrgp-rs/ repo until we adopt crates.io publishing.
lrgp = { path = "../lrgp-rs" }
ratspeak-core = { path = "crates/ratspeak-core" }
ratspeak-db = { path = "crates/ratspeak-db" }
ratspeak-runtime = { path = "crates/ratspeak-runtime" }
ratspeak-tauri = { path = "crates/ratspeak-tauri" }

# --- External dependencies ---

# BLE (RNode + mesh peer scanning)
btleplug = "0.11"

# Crypto
sha2 = "0.10"
rand = "0.8"

# Encoding
base64 = "0.22"

# Serialization
rmp-serde = "1"
rmpv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
bytes = "1"

# Audio
cpal = { version = "0.15", features = ["oboe-shared-stdcxx"] }

# Serial
serialport = "4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Misc
hex = "0.4"

# Testing
proptest = "1"
