[package]
name = "ratspeak-cli"
description = "Headless Ratspeak CLI and daemon entry points"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["serial", "seed"]
serial = ["ratspeak-runtime/serial"]
rnode-tcp = ["ratspeak-runtime/rnode-tcp"]
ble = ["ratspeak-runtime/ble"]
mobile-throttle = ["ratspeak-runtime/mobile-throttle"]
lxst-voice = ["ratspeak-runtime/lxst-voice"]
seed = ["ratspeak-runtime/seed"]
hardware = ["seed", "ratspeak-runtime/hardware"]

[dependencies]
ratspeak-core = { workspace = true }
ratspeak-db = { workspace = true }
ratspeak-runtime = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

[[bin]]
name = "ratspeakctl"
path = "src/bin/ratspeakctl.rs"

[[bin]]
name = "ratspeakd"
path = "src/bin/ratspeakd.rs"
