[package]
name = "ratspeak-core"
description = "Ratspeak domain types, Emitter trait, errors — no IPC, DB, or RNS deps"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Stable per-profile Reticulum instance-name/port derivation.
sha2 = { workspace = true }
