[package]
name = "ratspeak-db"
description = "Ratspeak SQLite layer — schema, migrations, queries"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ratspeak-core = { workspace = true }
lrgp = { workspace = true }

rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# spawn_db moves the blocking work off the async runtime — tokio dep is intentional.
tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
