[package]
name = "ratspeak-runtime"
description = "Ratspeak runtime: RNS + LXMF + LRGP wiring, AppState, async loops"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# `seed` (BIP-39 derivation, pure-Rust) is on by default — new identities are
# mnemonic-derived, so it's core, not optional.
default = ["seed"]
serial = ["dep:serialport", "rns-interface/serial", "rns-runtime/serial"]
rnode-tcp = ["rns-interface/rnode-tcp", "rns-runtime/rnode-tcp"]
ble = ["rns-interface/ble", "rns-runtime/ble"]
# Background-throttle gate for mobile builds.
mobile-throttle = ["rns-transport/mobile-throttle", "rns-interface/mobile-throttle"]
# Native LXST call signalling and Opus audio bridge.
lxst-voice = ["dep:cpal", "dep:lxst-core", "dep:lxst-rns", "dep:lxst-telephony"]
# BIP-39 seed derivation for software seed-restore (no pcsc). Enabled on all platforms.
seed = ["dep:rns-ratkey"]
# Hardware-backed (YubiKey/Nitrokey PIV) identities via rns-ratkey. Implies `seed`.
hardware = ["seed", "rns-ratkey/hardware"]

[dependencies]
ratspeak-core = { workspace = true }
ratspeak-db = { workspace = true }

# Direct rusqlite use (params! macros, custom queries) inside runtime.
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# Reticulum + LXMF + LRGP
rns-crypto = { workspace = true }
rns-wire = { workspace = true }
rns-identity = { workspace = true }
rns-transport = { workspace = true }
rns-link = { workspace = true }
rns-protocol = { workspace = true }
rns-interface = { workspace = true }
rns-runtime = { workspace = true }
rns-ratkey = { workspace = true, optional = true }
lxmf-core = { workspace = true }
lrgp = { workspace = true }
lxst-core = { workspace = true, optional = true }
lxst-rns = { workspace = true, optional = true }
lxst-telephony = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }

# Async + serialization
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmpv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Utilities
indexmap = "2"
hex = { workspace = true }
uuid = { version = "1", features = ["v4"] }
# Passcode at-rest encryption of software identities (P3).
argon2 = "0.5"
zeroize = "1"

# Optional interface backends
serialport = { workspace = true, optional = true }

# Advisory flock for the profile lock (kernel-released on process exit).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# iOS-only: CoreBluetooth authorization probe in platform_ios.rs
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"

# Android LXST voice output streams decoded PCM through a native AudioTrack so
# the platform applies VoIP routing and call-volume policy.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19"
