[package]
name = "ratspeak-tauri"
description = "Ratspeak Tauri IPC surface — #[tauri::command] handlers + AppHandle event emitter"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["serial", "seed"]
# GUI agent management. Off by default: the CLI-first beta manages bots through
# ratspeakd/ratspeakctl, not the personal desktop app, so this surface (and its
# ~24 Tauri commands) is gated until a decoupled agent UX ships.
agent-gui = []
# Re-exported through ratspeak-runtime so user-visible flag names don't change.
serial = ["ratspeak-runtime/serial", "ratspeak-cli/serial", "dep:serialport", "rns-interface/serial", "rns-runtime/serial"]
rnode-tcp = ["ratspeak-runtime/rnode-tcp", "ratspeak-cli/rnode-tcp", "rns-interface/rnode-tcp", "rns-runtime/rnode-tcp"]
ble = ["ratspeak-runtime/ble", "ratspeak-cli/ble", "rns-interface/ble", "rns-runtime/ble"]
mobile-throttle = ["ratspeak-runtime/mobile-throttle", "ratspeak-cli/mobile-throttle", "rns-transport/mobile-throttle", "rns-interface/mobile-throttle"]
lxst-voice = ["ratspeak-runtime/lxst-voice", "ratspeak-cli/lxst-voice"]
seed = ["ratspeak-runtime/seed", "ratspeak-cli/seed"]
hardware = ["seed", "ratspeak-runtime/hardware", "ratspeak-cli/hardware"]

[dependencies]
# Database
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# Tauri IPC — #[tauri::command], AppHandle::emit, generate_handler!. The main
# entry points (WebView, bundling) live in the sibling `src-tauri/` crate; this
# dep is here because commands and event emitters are implemented alongside
# the business logic they run.
tauri = { version = "2" }
tauri-plugin-notification = "2"

# Async runtime
tokio = { workspace = true }
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Internal crates
ratspeak-core = { workspace = true }
ratspeak-db = { workspace = true }
ratspeak-runtime = { workspace = true }
ratspeak-cli = { path = "../ratspeak-cli", default-features = false }
rns-crypto = { workspace = true }
rns-runtime = { workspace = true }
rns-identity = { workspace = true }
rns-transport = { workspace = true }
rns-protocol = { workspace = true }
rns-interface = { workspace = true }
lxmf-core = { workspace = true }
lrgp = { workspace = true }

# MessagePack value type (for LRGP envelope bridging)
rmpv = { workspace = true }

tracing = { workspace = true }
hex = { workspace = true }
mime_guess = "2"
base64 = "0.22"
glob = "0.3"
serialport = { workspace = true, optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
# Reading CBManager.authorization without instantiating CBCentralManager
# (which would trigger the iOS Bluetooth permission prompt). objc2 raw
# msg_send! is enough here — no need for a full Core Bluetooth binding crate.
objc2 = "0.6"

[dev-dependencies]
tempfile = "3"
